# SkeinPrivacy

./: .env.example  .gitignore  .prettierignore  Anchor.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LAUNCH.md  LICENSE  PROJECT.md  README.md  SECURITY.md  UPDATES.md  VPN.md  deny.toml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release-desktop.yml
clients/desktop/: index.html  package.json  vite.config.ts
clients/desktop/src/: App.tsx  styles.css
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/src/: lib.rs  main.rs
crates/weft-net/: Cargo.toml
crates/weft-net/examples/: receipt_golden.rs
crates/weft-net/src/: cell_transport.rs  circuit.rs  circuit_relay.rs  client.rs  discovery.rs  error.rs  exit.rs  keys.rs  lib.rs  metering.rs  node.rs  noise.rs  receipt.rs  relay.rs  selection.rs  sphinx.rs
crates/weft-net/tests/: simulator.rs
crates/weft-node/: Cargo.toml
crates/weft-node/src/: daemon.rs  main.rs  relay_service.rs
crates/weft-node/tests/: cell_transport.rs  discovery.rs
crates/weft-primitives/: Cargo.toml
crates/weft-primitives/examples/: golden.rs
crates/weft-primitives/src/: lib.rs  merkle.rs
crates/weft-primitives/tests/: properties.proptest-regressions  properties.rs
crates/weft-vpn/: Cargo.toml
crates/weft-vpn/src/: client_engine.rs  exit.rs  lib.rs  localnet.rs  manifest.rs  socks.rs  stream.rs  tor_backend.rs  tun.rs  vless.rs
crates/weft-vpn/tests/: circuit_stream.rs  e2e.rs
docker/: Dockerfile  Dockerfile.node  control-plane.mjs  node-entrypoint.sh  reload-xray.sh
docs/: devnet-rehearsal-checklist.md  devnet-rehearsal-runbook.md  mainnet-launch-checklist.md
legacy-programs/governance/src/: constants.rs  external.rs  lib.rs
legacy-programs/governance/tests/: governance.rs
legacy-programs/node-registry/: Cargo.toml
legacy-programs/node-registry/src/: error.rs  instructions.rs  lib.rs  state.rs
legacy-programs/node-registry/src/instructions/: deregister.rs  register.rs  set_reputation.rs  set_stake.rs  update.rs
legacy-programs/reputation/src/: error.rs  external.rs  instructions.rs  lib.rs
legacy-programs/rewards-settlement/: Cargo.toml
legacy-programs/rewards-settlement/src/: instructions.rs  lib.rs  state.rs
legacy-programs/rewards-settlement/src/instructions/: dispute.rs  initialize.rs  pay_traffic.rs  payment_escrow.rs  post_epoch.rs  sweep_epoch.rs
legacy-programs/rewards-settlement/tests/: dispute.rs
legacy-programs/staking/: Cargo.toml
legacy-programs/staking/src/: error.rs  lib.rs  mirror.rs  state.rs
legacy-programs/staking/tests/: staking.rs
legacy-programs/token-distributor/src/: error.rs  external.rs  lib.rs
legacy-programs/token-distributor/tests/: distributor.rs
legacy-programs/weft-vesting/src/: instructions.rs  lib.rs  state.rs
legacy-programs/weft-vesting/tests/: vesting.rs
legacy-services/aggregator/: m4smoke.ts
legacy-services/genesis/service/: tsconfig.json
legacy-services/governance/service/: package.json
legacy-services/registry-provision/: cli.ts  m3smoke.ts  umi.ts
programs/governance/: Cargo.toml
programs/governance/src/: error.rs  instructions.rs  lib.rs  state.rs
programs/governance/tests/: governance.rs
programs/node-registry/: Cargo.toml
programs/node-registry/src/: constants.rs  instructions.rs  lib.rs  state.rs
programs/node-registry/src/instructions/: admin.rs  initialize_registry.rs  register.rs  register_tree.rs
programs/node-registry/tests/: registry.rs
programs/reputation/: Cargo.toml
programs/reputation/src/: constants.rs  instructions.rs  lib.rs  mirror.rs  state.rs
programs/reputation/src/instructions/: admin.rs  initialize_config.rs  penalize.rs  resync.rs  update_metrics.rs
programs/reputation/tests/: reputation.rs
programs/rewards-settlement/: Cargo.toml
programs/rewards-settlement/src/: constants.rs  error.rs  external.rs  instructions.rs  lib.rs  state.rs
programs/rewards-settlement/tests/: dispute.rs  settlement.rs
programs/staking/: Cargo.toml
programs/staking/src/: constants.rs  error.rs  external.rs  instructions.rs  lib.rs  mirror.rs
programs/staking/tests/: staking.rs
programs/token-distributor/: Cargo.toml
programs/token-distributor/src/: constants.rs  lib.rs  state.rs
programs/token-distributor/src/instructions/: claim.rs  initialize.rs
programs/weft/: Cargo.toml
programs/weft-vesting/: Cargo.toml
programs/weft-vesting/src/: constants.rs  error.rs  lib.rs
programs/weft/src/: lib.rs
programs/weft/tests/: settle_from_escrow.rs
scripts/: buyback.env.example  check-home-exit-test.sh  connect.sh  deploy-node.sh  deploy-program.sh  fetch-singbox.sh  gen-relay-secrets.mjs  mainnet-cutover.sh  mainnet-launch.sh  mainnet-preflight.sh  provision-node-nft.sh  run-node.cmd  run-node.ps1  run-node.sh  run-relay.sh  setup-devnet.sh  share-link.sh  start-localnet.sh  stop-home-exit-test.sh  stop-node.sh  test-genesis-localnet.sh  test-home-exit.sh  testnet-down.sh  testnet-up.sh  weft-buyback-burn.service  weft-vpn-net.sh
sdk/: codegen.mjs  package.json  tsconfig.json
sdk/src/: index.ts  math.ts
sdk/src/__fixtures__/: reward-vectors.json
sdk/test/: math.parity.test.ts
services/aggregator/: .gitignore  package.json
services/aggregator/src/: claim.ts  cli.ts  epoch.ts  geo.ts  kit.ts  m4smoke.ts  nodes.ts  pay.ts  payout.ts  poster.ts  profileTotals.ts  receipts.ts  rewards.ts  server.ts  store.ts
services/aggregator/test/: helpers.ts  m6-ingest.test.ts  pay.test.ts  profile-totals.test.ts  receipt-parity.test.ts  receipts.test.ts  rewards.test.ts  server.test.ts  store.test.ts
services/buyback-burn/: package.json  tsconfig.json
services/buyback-burn/src/: index.ts
services/control-plane/: README.md  package.json
services/control-plane/src/: chain.ts  config.ts  controller.ts  (+10 more)
services/genesis/: package.json
services/indexer/: package.json
services/registry-provision/: package.json
(+73 files in other folders)
