[workspace]
members = ["crates/*", "programs/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/weft-privacy/weft"
homepage = "https://weft.network"
authors = ["Weft Privacy contributors"]

[workspace.dependencies]
# On-chain
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"
# Internal
weft-primitives = { path = "crates/weft-primitives" }
# Test harness (Anchor 1.0 LiteSVM convention)
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-pubkey = "3.0.0"
solana-instruction = "3.0.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
