[workspace]
members = ["crates/*", "programs/weft"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/weft-privacy/weft"
homepage = "https://weft.network"
authors = ["Weft Privacy contributors"]

[workspace.dependencies]
# On-chain
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"
spl-token-interface = "2.0.0"
# Compressed NFTs (Bubblegum V2) — built for Solana 3.x / Anchor 1.0.
# No `anchor` feature: the CPI builders don't need it, and pulling anchor-lang in
# would make Anchor's IDL generator try (and fail) to parse this Codama crate.
mpl-bubblegum = { version = "3.0.0", default-features = false }
# Internal
weft-primitives = { path = "crates/weft-primitives" }
# --- M6 networking data plane (host-only crates; NOT SBF) ---
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "signal"] }
futures = "0.3"
libp2p = { version = "0.54", features = ["tokio", "kad", "noise", "yamux", "tcp", "identify", "request-response", "cbor", "macros", "relay", "dcutr", "autonat"] }
libp2p-stream = "=0.2.0-alpha"
tokio-util = { version = "0.7", features = ["codec"] }
snow = { version = "0.9", default-features = false, features = ["default-resolver"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = { version = "4", features = ["rand_core"] }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
chacha20 = "0.9"
poly1305 = "0.8"
hkdf = "0.12"
blake2 = "0.10"
sha2 = { version = "0.10", default-features = false }
rand = "0.8"
rand_core = "0.6"
hex = "0.4"
bs58 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
thiserror = "1"
ciborium = "0.2"
# Test harness (Anchor 1.0 LiteSVM convention)
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-pubkey = "3.0.0"
solana-instruction = "3.0.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
strip = true

# On-chain programs optimize for size — smaller bytecode = lower deploy rent (a
# refundable deposit, but less SOL to lock up front). Host crates (weft-vpn/net/node)
# keep opt-level=3 for throughput; only these packages switch to "z".
[profile.release.package.weft]
opt-level = "z"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
