[package]
name = "weft-net"
description = "Weft networking data plane: WireGuard onion routing, Kademlia discovery, traffic metering"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
weft-primitives = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
snow = { workspace = true }
x25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
chacha20 = { workspace = true }
poly1305 = { workspace = true }
hkdf = { workspace = true }
blake2 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ciborium = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "test-util"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
