[package]
name = "weft-node"
description = "Weft node daemon: join the Kademlia DHT, publish the node descriptor, relay onion traffic, and emit signed receipts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "weft-node"
path = "src/main.rs"

[dependencies]
weft-net = { workspace = true }
weft-primitives = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
