[package]
name = "weft-primitives"
description = "Shared Weft protocol constants, tokenomics, and on-chain-safe reward math"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
