[package]
name = "weft-primitives"
description = "Shared Weft protocol constants, tokenomics, and on-chain-safe reward math"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# no_std SHA-256 for the reward merkle tree (byte-identical to Solana `hashv` and
# @noble/hashes sha256, so on-chain, the aggregator, and tests agree).
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
# Property-based fuzzing of the economic integer math (audit hardening, M8).
proptest = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
