[package]
name = "weft-vpn"
description = "Weft VPN engine: tunnel real traffic through the onion circuit (SOCKS + VLESS gateway) and egress at an exit node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "weft_vpn"

[[bin]]
name = "weft-vpn"
path = "src/bin/weft_vpn.rs"

[dependencies]
weft-net = { workspace = true }
weft-primitives = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
libp2p = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# VLESS gateway: optional TLS transport (rustls, ring provider to match libp2p-tls) +
# self-signed cert generation for dev deployments.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = { version = "1", features = ["std"] }
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }

[dev-dependencies]
tokio = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
