[package]
name = "weft-vpn"
description = "Weft VPN engine: tunnel real traffic through the Tor network (SOCKS + VLESS gateway)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "weft_vpn"

[[bin]]
name = "weft-vpn"
path = "src/bin/weft_vpn.rs"

[dependencies]
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["compat"] }
socket2 = "0.5"
rand = { workspace = true }
hex = { workspace = true }
# The data plane: the Tor network via Arti (pure-Rust Tor client). Multi-hop onion routing,
# flow control, NAT traversal, and exit selection come from 20 years of Tor hardening.
arti-client = { version = "0.43", features = ["tokio", "native-tls"] }
tor-rtcompat = { version = "0.43", features = ["tokio", "native-tls"] }
# VLESS gateway: optional TLS transport (rustls, ring provider) + self-signed cert generation.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = { version = "1", features = ["std"] }
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }

[dev-dependencies]
tokio = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
