[package]
name = "weft-vesting"
description = "Weft token vesting: cliff + linear release schedules"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "weft_vesting"

[features]
default = ["no-log-ix-name"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
weft-primitives = { workspace = true }

[dev-dependencies]
anchor-lang = { workspace = true }
litesvm = { workspace = true }
solana-message = { workspace = true }
solana-transaction = { workspace = true }
solana-signer = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-instruction = { workspace = true }
solana-account = "3"
solana-clock = "3.1"
# Versions pinned to match spl-token-interface 2.0.0's own deps so the Pack
# trait and Pubkey/COption types unify (no duplicate-version trait mismatch).
spl-token-interface = "2"
solana-program-pack = "3.1"
solana-program-option = "3.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
