[package]
name = "weft"
description = "Weft core: node registry, staking, proof-of-bandwidth settlement, burn, payment escrow"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "weft"

[features]
default = ["no-log-ix-name"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
weft-primitives = { workspace = true }

[dev-dependencies]
anchor-lang = { workspace = true }
litesvm = { workspace = true }
solana-message = { workspace = true }
solana-transaction = { workspace = true }
solana-signer = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-instruction = { workspace = true }
solana-account = "3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
